css/style.css
*{
    padding: 0;
    margin: 0;
    font-family: "Montserrat", sans-serif;
}
html, body{
    height: 100%;
    background-color: var(--backingCol);
    box-sizing: border-box;
}
*, *:before, *:after {
    box-sizing: inherit;
}
:root{
    --topBarColor: white;
    --topBarAnimLength: .5s;
    --backingCol: rgb(230, 230, 230);
    --contentColor: white;
    --barSize: 10vh;
    --contentWidth: 98%;
}
/*Menu Animations*/
@keyframes grow{
    from{width: 90%;  border-radius: 15px;}
    to{width: var(--contentWidth); border-radius: 0;}
}
@keyframes shrink{
    from{width: var(--contentWidth); border-radius: 0;}
    to{width: 90%; border-radius: 15px;}
}
@keyframes reveal{
    from{height: 0;}
    to{ height: var(--barSize);}
}
@keyframes hide{
    from{height: var(--barSize);}
    to{height: 0; }
}
@keyframes color{
    from{opacity: 0;}
    to{opacity: 1;}
}
@keyframes noColor{
    from{opacity: 1;}
    to{opacity: 0;}
}
@keyframes square{
    from{border-radius: 15px;}
    to{border-radius: 0;;}
}
@keyframes round{
    from{border-radius: 0;}
    to{border-radius: 15px;}
}
.square{
    animation-name: square;
    animation-duration: 1s;
}
.round{
    animation-name: round;
    animation-duration: 1s;
    border-radius: 15px;
}
.reveal{
    display: block;
    height: 0;
    animation-name: reveal;
    animation-duration: 1s;
    height: var(--barSize);
}
.hide{
    height: var(--barSize);
    animation-name: hide;
    animation-duration: 1s;
    height: 0;
}
.shrink{
    width: var(--contentWidth);
    animation-name: shrink;
    animation-duration: 1s;
    width: 90%;
    border-radius: 15px;
}
.dn{
    display: none;
}
.grow{
    animation-name: grow;
    animation-duration: 1s;
    border-radius: 0;
    width: var(--contentWidth);
}
.color{
    animation-name: color;
    animation-duration: var(--topBarAnimLength);
    background-color: var(--topBarColor);
}
.noColor{
    background-color: var(--topBarColor);
    animation-name: noColor;
    animation-duration: var(--topBarAnimLength);
    opacity: 0;
}
/*Sizing and Styling of Main Elements*/
#mainBox{
    max-width: var(--contentWidth);
    display: flex;
    min-height: 101%;
    flex-wrap: wrap;
    margin: 0 auto;
    flex-direction: column;
    justify-content: center;
}
#topBar{
    width: 100%;
    height: 10%;
    background-color: var(--topBarColor);
}
#content{
    margin: 0 auto;
    background-color: var(--contentColor);
    width: 100%;
    flex-grow: 5;
}
#links{
    display: flex;
    align-content: flex-end;
    align-items: flex-end;
}
#menu{
    justify-content: space-around;
    background-color: var(--backingCol);
}
#links{
    display: flex;
    width: 100%;
    height: 100%;
    justify-content: space-around;
    list-style: none;
}
#footer{
    height: 10vh;
}
ul[id="links"] > li{
    text-decoration: none;
    padding-bottom: 2%;
}
#burger{
    position: absolute;
    top: 2.75%;
    right: 4%;
    opacity: 1;
}
.fas.fa-bars{
    float: right;
    color: black;
    font-size: 5vh;
}

